[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/ARCADECLASSIC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Quiz/DEAD_Quiz.gd" type="Script" id=2]
[ext_resource path="res://Font/Retro Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Button/ButtonHover.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Button/ButtonNormal.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Button/ButtonPressed.tres" type="StyleBox" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 1, 0.811765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Title" type="Label" parent="Text"]
margin_right = 1024.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 3 )
text = "WHAT IS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="Text"]
margin_right = 200.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="Text"]
margin_right = 1024.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 1 )
text = "16 x 24"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUTTONS" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 608.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CORRECT_Button" type="Button" parent="BUTTONS"]
anchor_right = 25.6
anchor_bottom = 15.0
margin_left = 88.0
margin_top = 432.0
margin_right = -25854.4
margin_bottom = -8608.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "1024"

[node name="INCORRET_Button" type="Button" parent="BUTTONS"]
anchor_right = 25.6
anchor_bottom = 15.0
margin_left = 88.0
margin_top = 240.0
margin_right = -25854.4
margin_bottom = -8800.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "1035"

[node name="INCORRET_Button2" type="Button" parent="BUTTONS"]
anchor_right = 25.6
anchor_bottom = 15.0
margin_left = 664.0
margin_top = 240.0
margin_right = -25278.4
margin_bottom = -8800.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "2516"

[node name="INCORRET_Button3" type="Button" parent="BUTTONS"]
anchor_right = 25.6
anchor_bottom = 15.0
margin_left = 664.0
margin_top = 432.0
margin_right = -25278.4
margin_bottom = -8608.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "18512"
[connection signal="pressed" from="BUTTONS/CORRECT_Button" to="." method="_on_CORRECT_Button_pressed"]
[connection signal="pressed" from="BUTTONS/INCORRET_Button" to="." method="_on_INCORRET_Button_pressed"]
[connection signal="pressed" from="BUTTONS/INCORRET_Button2" to="." method="_on_INCORRET_Button2_pressed"]
[connection signal="pressed" from="BUTTONS/INCORRET_Button3" to="." method="_on_INCORRET_Button3_pressed"]
