extends Control



func _on_CORRECT_Button_pressed():
	get_tree().change_scene("res://Scenes/Quiz/OTHER QUIZ/Correct.tscn")


func _on_INCORRET_Button_pressed():
	get_tree().change_scene("res://Scenes/Quiz/OTHER QUIZ/Incorrect.tscn")


func _on_INCORRET_Button2_pressed():
	get_tree().change_scene("res://Scenes/Quiz/OTHER QUIZ/Incorrect.tscn")


func _on_INCORRET_Button3_pressed():
	get_tree().change_scene("res://Scenes/Quiz/OTHER QUIZ/Incorrect.tscn")
